--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -70,17 +70,16 @@ jobs:
       - name: Create tag
         run: |
           git tag -a $CLI_VERSION -m "Update css and js for CDN"
-          git push
+          git push origin --tags
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Create Release
-        id: create_release
-        uses: actions/create-release@latest
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: "${{ env.CLI_VERSION }}"
-          release_name: "${{ env.CLI_VERSION }}"
-          draft: false
-          prerelease: false
+          tag: ${{ env.CLI_VERSION }}
+        run: |
+          gh release create "$tag" \
+            --repo="$GITHUB_REPOSITORY" \
+            --title="$tag" \
+            --notes="CDN files updated to CLI version $tag"
